perf(metrics): aggregate agent performance in SQL instead of 3x findAll